Remove some compiler/CheckStyle warnings.